readme update, some lsh fixes

--- a/Proteins_LSH_Project/src/lsh_analysis.ipynb
+++ b/Proteins_LSH_Project/src/lsh_analysis.ipynb
@@ -67,10 +67,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "87ab4fe3-9109-4cc3-b998-6e54d03bcc17",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(25112, 2)\n",
+      "(25112, 2)\n",
+      "(25111, 3)\n"
+     ]
+    }
+   ],
    "source": [
     "os.chdir(PROJECT_PATH)\n",
     "\n",
@@ -137,26 +147,26 @@
       "+----------+--------------------+\n",
       "|      name|             protein|\n",
       "+----------+--------------------+\n",
-      "|A0A0A0AH17|VSGRPAPVITWSKQGVD...|\n",
-      "|A0A0A0AH21|IRGRPTPEVKWGKIDGE...|\n",
-      "|A0A0A0AHW1|FRGKPVPNVTWNKPDTD...|\n",
-      "|A0A0A0AHW7|IKGRPTPEVKWTKDDVS...|\n",
-      "|A0A0A0AIP1|IKGRPEPEVKWEKAEGT...|\n",
-      "|A0A0A0AIP6|VRGRPPPKITWSKVGAN...|\n",
-      "|A0A0A0AJX3|MVQHVHREFSPPSRLLR...|\n",
-      "|A0A0A0AJX7|FRGRPTPDITWSREEGE...|\n",
-      "|A0A0A0AJY1|RESDHRAWTPVSYTVTR...|\n",
-      "|A0A0A0AL80|GRPVPTAVWSKADANLS...|\n",
-      "|A0A0A0AL85|IKGRPAPEVKWTREHGE...|\n",
-      "|A0A0A0MRA3|MTTQAPTFTQPLQSVVV...|\n",
-      "|A0A0A0MTS7|MTTQAPTFTQPLQSVVV...|\n",
-      "|A0A0A1WFI8|VGAICDVFNHTPMCRCP...|\n",
-      "|A0A0A1X8D2|TTGACIKANVTITTTTT...|\n",
-      "|A0A0A1XJJ6|PSPCGPNSECTATTNGA...|\n",
-      "|A0A0A1XKV6|RDPCPGSCGFNAICNVL...|\n",
-      "|A0A0C4DG59|AAEAVATGAKEVKQDAD...|\n",
-      "|A0A0C5PPG2|KFRDTIVVNAGETFRLE...|\n",
-      "|A0A0C5PXW5|SVSLSWTKPEHDGGSKI...|\n",
+      "|A0A014MIZ3|MSNDEKVLEYLKKLTAD...|\n",
+      "|A0A022PR68|MKDSITKKAKSILKDEL...|\n",
+      "|A0A026VSG9|MDLGGVRDITVRAGEDF...|\n",
+      "|A0A034WAF9|FIIRRKWQKTGNAIRAL...|\n",
+      "|A0A034WK66|VHEQVTPCEPNPCGSNA...|\n",
+      "|A0A034WPU1|APPNCRPECVVSSECSQ...|\n",
+      "|A0A034WTR2|VPNERAIFFVKIDCDED...|\n",
+      "|A0A034WV39|AHLACMNTRCADPCVGS...|\n",
+      "|A0A060W4G5|MWEAPEHDGGSPLTGYQ...|\n",
+      "|A0A060W4N1|MSSSSMTEMMSHSHLEG...|\n",
+      "|A0A060WEK7|MFIPESAVEIVRPPKDV...|\n",
+      "|A0A060YYB5|MRLIWKLPANDGGERIK...|\n",
+      "|A0A075R4X7|MNKDLIQLFSLTQPQQR...|\n",
+      "|A0A075THI1|SSITVAWGKPIYDGGSE...|\n",
+      "|A0A075TKX4|NSITVAWGKPIYDGGSE...|\n",
+      "|A0A076EI29|MGEVPLTIAQYIELRGD...|\n",
+      "|A0A087R0Q9|MVQHVHREFSPPSRLLR...|\n",
+      "|A0A087R0R0|VSGRPAPVITWSKQGVD...|\n",
+      "|A0A087R0R1|FRGKPVPNVTWNKSDTD...|\n",
+      "|A0A087R0R2|IKGRPEPEVKWEKAEGT...|\n",
       "+----------+--------------------+\n",
       "only showing top 20 rows\n",
       "\n"
@@ -180,26 +190,26 @@
       "+---------------+----------+--------------------+\n",
       "|        cluster|      name|             protein|\n",
       "+---------------+----------+--------------------+\n",
+      "|UniRef50_Q8WZ42|    A2ASS6|MTTQAPMFTQPLQSVVV...|\n",
+      "|UniRef50_Q8WZ42|  Q8WZ42-8|MTTQAPTFTQPLQSVVV...|\n",
+      "|UniRef50_Q8WZ42|A0A2J8PRG4|MTTQAPTFTQPLQSVVV...|\n",
+      "|UniRef50_Q8WZ42|A0A2J8PRH0|MTTQAPTFTQPLQSVVV...|\n",
+      "|UniRef50_Q8WZ42|A0A2J8VRI6|MTTQAPTFTQPLQSVVV...|\n",
+      "|UniRef50_Q8WZ42|A0A2J8VRF7|MTTQAPTFTQPLQSVVV...|\n",
+      "|UniRef50_Q8WZ42|A0A8I5U7Y9|MTTQAPTFTQPLQSVVV...|\n",
+      "|UniRef50_Q8WZ42|  Q8WZ42-2|MTTQAPTFTQPLQSVVV...|\n",
       "|UniRef50_Q8WZ42|A0A0C4DG59|AAEAVATGAKEVKQDAD...|\n",
-      "|UniRef50_Q8WZ42|A0A0A0AL80|GRPVPTAVWSKADANLS...|\n",
-      "|UniRef50_Q8WZ42|A0A0K0N520|SSITVAWGKPIYDGGSE...|\n",
-      "|UniRef50_Q8WZ42|A0A0D9RKL7|MTTQAPTFTQPLQSVVV...|\n",
-      "|UniRef50_Q8WZ42|A0A0C5PXW5|SVSLSWTKPEHDGGSKI...|\n",
-      "|UniRef50_Q8WZ42|A0A0C5PXZ6|MDPKFRDTIVVNAGETF...|\n",
-      "|UniRef50_Q8WZ42|A0A0C5Q1Y1|MDPKFRDTIVVNAGETF...|\n",
-      "|UniRef50_Q8WZ42|A0A0C5PPG2|KFRDTIVVNAGETFRLE...|\n",
-      "|UniRef50_Q8WZ42|A0A0C5QAN6|NAHIVDTTKNSITLAWG...|\n",
-      "|UniRef50_Q8WZ42|A0A0K0N5B4|NSITVAWGKPIYDGGSE...|\n",
-      "|UniRef50_Q8WZ42|A0A0K0N4T8|NSITVAWGKPIYDGGSE...|\n",
-      "|UniRef50_Q8WZ42|A0A0K0N4U3|NSITVAWGKPIYDGGSE...|\n",
-      "|UniRef50_Q8WZ42|A0A0C5PZ18|IVVNAGETFRLEADVHG...|\n",
-      "|UniRef50_Q8WZ42|A0A0C5PZ22|MDPKFRDTIVVNAGETF...|\n",
-      "|UniRef50_Q8WZ42|A0A0C5PXZ0|MDPKFRDTIVVNAGETF...|\n",
-      "|UniRef50_Q8WZ42|A0A0C5QAR3|SASLMWEKPEHDGGSRV...|\n",
-      "|UniRef50_Q8WZ42|A0A0C5PXW9|KPEHDGGSKIIQYIVEM...|\n",
-      "|UniRef50_Q8WZ42|A0A0C5PZ04|SVSLSWTKPEHDGGSKI...|\n",
-      "|UniRef50_Q8WZ42|A0A0C5PZ74|DVSQTSASLMWEKPEHD...|\n",
-      "|UniRef50_Q8WZ42|A0A0A0MTS7|MTTQAPTFTQPLQSVVV...|\n",
+      "|UniRef50_Q8WZ42|  Q8WZ42-7|MTTQAPTFTQPLQSVVV...|\n",
+      "|UniRef50_Q8WZ42|A0A2J8PRG6|MTTQAPTFTQPLQSVVV...|\n",
+      "|UniRef50_Q8WZ42|A0A2J8VRH1|MTTQAPTFTQPLQSVVV...|\n",
+      "|UniRef50_Q8WZ42|    C0JYZ2|MTTQAPTFTQPLQSVVV...|\n",
+      "|UniRef50_Q8WZ42| Q8WZ42-11|MTTQAPTFTQPLQSVVV...|\n",
+      "|UniRef50_Q8WZ42|    H2P803|MTTQAPTFTQPLQSVVV...|\n",
+      "|UniRef50_Q8WZ42|A0A6P8QXT8|MTTQAPTFLQPLQSVVT...|\n",
+      "|UniRef50_Q8WZ42|A0A6P8RJ11|MTTQAPTFLQPLQSVVT...|\n",
+      "|UniRef50_Q8WZ42|A0A8B7X843|MTTQAPTFKQPLQSVVV...|\n",
+      "|UniRef50_Q8WZ42|A0A091R2T7|IKGRPTPEVTWTKDDVS...|\n",
+      "|UniRef50_Q8WZ42|A0A7L3SFD7|RDVASAQWVAISSSSKK...|\n",
       "+---------------+----------+--------------------+\n",
       "only showing top 20 rows\n",
       "\n"
