brs project init

--- a/Proteins_LSH_Project/src/lsh_analysis.ipynb
+++ b/Proteins_LSH_Project/src/lsh_analysis.ipynb
@@ -222,48 +222,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9c4c4d14-d127-4ba3-95a6-bf948c38a971",
+   "execution_count": 10,
+   "id": "df99b5fa-c890-4f12-8489-4be99161add8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = data.alias('df')\n",
+    "id(df) == id(data)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "057c71db-ba55-41d1-816b-a09d0d4debce",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "PythonException",
+     "evalue": "\n  An exception was thrown from the Python worker. Please see the stack trace below.\nTraceback (most recent call last):\n  File \"/opt/bitnami/spark/python/lib/pyspark.zip/pyspark/worker.py\", line 1231, in main\n    func, profiler, deserializer, serializer = read_udfs(pickleSer, infile, eval_type)\n                                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n  File \"/opt/bitnami/spark/python/lib/pyspark.zip/pyspark/worker.py\", line 1067, in read_udfs\n    udfs.append(read_single_udf(pickleSer, infile, eval_type, runner_conf, udf_index=i))\n                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n  File \"/opt/bitnami/spark/python/lib/pyspark.zip/pyspark/worker.py\", line 529, in read_single_udf\n    f, return_type = read_command(pickleSer, infile)\n                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n  File \"/opt/bitnami/spark/python/lib/pyspark.zip/pyspark/worker.py\", line 90, in read_command\n    command = serializer._read_with_length(file)\n              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n  File \"/opt/bitnami/spark/python/lib/pyspark.zip/pyspark/serializers.py\", line 174, in _read_with_length\n    return self.loads(obj)\n           ^^^^^^^^^^^^^^^\n  File \"/opt/bitnami/spark/python/lib/pyspark.zip/pyspark/serializers.py\", line 472, in loads\n    return cloudpickle.loads(obj, encoding=encoding)\n           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\nModuleNotFoundError: No module named 'functions'\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mPythonException\u001b[0m                           Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[14], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# Add shingles column to the DataFrame\u001b[39;00m\n\u001b[1;32m      4\u001b[0m df \u001b[38;5;241m=\u001b[39m df\u001b[38;5;241m.\u001b[39mwithColumn(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mshingles\u001b[39m\u001b[38;5;124m\"\u001b[39m, shingle_udf(col(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mprotein\u001b[39m\u001b[38;5;124m\"\u001b[39m)))\n\u001b[0;32m----> 5\u001b[0m \u001b[43mdf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcollect\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m# Create the HashingTF and MinHashLSH instances\u001b[39;00m\n\u001b[1;32m      7\u001b[0m hashingTF \u001b[38;5;241m=\u001b[39m HashingTF(inputCol\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mshingles\u001b[39m\u001b[38;5;124m\"\u001b[39m, outputCol\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfeatures\u001b[39m\u001b[38;5;124m\"\u001b[39m, numFeatures\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1000\u001b[39m)\n",
+      "File \u001b[0;32m/usr/local/spark/python/pyspark/sql/dataframe.py:1257\u001b[0m, in \u001b[0;36mDataFrame.collect\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1237\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Returns all the records as a list of :class:`Row`.\u001b[39;00m\n\u001b[1;32m   1238\u001b[0m \n\u001b[1;32m   1239\u001b[0m \u001b[38;5;124;03m.. versionadded:: 1.3.0\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   1254\u001b[0m \u001b[38;5;124;03m[Row(age=14, name='Tom'), Row(age=23, name='Alice'), Row(age=16, name='Bob')]\u001b[39;00m\n\u001b[1;32m   1255\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m   1256\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m SCCallSiteSync(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_sc):\n\u001b[0;32m-> 1257\u001b[0m     sock_info \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_jdf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcollectToPython\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1258\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mlist\u001b[39m(_load_from_socket(sock_info, BatchedSerializer(CPickleSerializer())))\n",
+      "File \u001b[0;32m/usr/local/spark/python/lib/py4j-0.10.9.7-src.zip/py4j/java_gateway.py:1322\u001b[0m, in \u001b[0;36mJavaMember.__call__\u001b[0;34m(self, *args)\u001b[0m\n\u001b[1;32m   1316\u001b[0m command \u001b[38;5;241m=\u001b[39m proto\u001b[38;5;241m.\u001b[39mCALL_COMMAND_NAME \u001b[38;5;241m+\u001b[39m\\\n\u001b[1;32m   1317\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcommand_header \u001b[38;5;241m+\u001b[39m\\\n\u001b[1;32m   1318\u001b[0m     args_command \u001b[38;5;241m+\u001b[39m\\\n\u001b[1;32m   1319\u001b[0m     proto\u001b[38;5;241m.\u001b[39mEND_COMMAND_PART\n\u001b[1;32m   1321\u001b[0m answer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mgateway_client\u001b[38;5;241m.\u001b[39msend_command(command)\n\u001b[0;32m-> 1322\u001b[0m return_value \u001b[38;5;241m=\u001b[39m \u001b[43mget_return_value\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m   1323\u001b[0m \u001b[43m    \u001b[49m\u001b[43manswer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgateway_client\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtarget_id\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mname\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1325\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m temp_arg \u001b[38;5;129;01min\u001b[39;00m temp_args:\n\u001b[1;32m   1326\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(temp_arg, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m_detach\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n",
+      "File \u001b[0;32m/usr/local/spark/python/pyspark/errors/exceptions/captured.py:185\u001b[0m, in \u001b[0;36mcapture_sql_exception.<locals>.deco\u001b[0;34m(*a, **kw)\u001b[0m\n\u001b[1;32m    181\u001b[0m converted \u001b[38;5;241m=\u001b[39m convert_exception(e\u001b[38;5;241m.\u001b[39mjava_exception)\n\u001b[1;32m    182\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(converted, UnknownException):\n\u001b[1;32m    183\u001b[0m     \u001b[38;5;66;03m# Hide where the exception came from that shows a non-Pythonic\u001b[39;00m\n\u001b[1;32m    184\u001b[0m     \u001b[38;5;66;03m# JVM exception message.\u001b[39;00m\n\u001b[0;32m--> 185\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m converted \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m    186\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    187\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m\n",
+      "\u001b[0;31mPythonException\u001b[0m: \n  An exception was thrown from the Python worker. Please see the stack trace below.\nTraceback (most recent call last):\n  File \"/opt/bitnami/spark/python/lib/pyspark.zip/pyspark/worker.py\", line 1231, in main\n    func, profiler, deserializer, serializer = read_udfs(pickleSer, infile, eval_type)\n                                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n  File \"/opt/bitnami/spark/python/lib/pyspark.zip/pyspark/worker.py\", line 1067, in read_udfs\n    udfs.append(read_single_udf(pickleSer, infile, eval_type, runner_conf, udf_index=i))\n                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n  File \"/opt/bitnami/spark/python/lib/pyspark.zip/pyspark/worker.py\", line 529, in read_single_udf\n    f, return_type = read_command(pickleSer, infile)\n                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n  File \"/opt/bitnami/spark/python/lib/pyspark.zip/pyspark/worker.py\", line 90, in read_command\n    command = serializer._read_with_length(file)\n              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n  File \"/opt/bitnami/spark/python/lib/pyspark.zip/pyspark/serializers.py\", line 174, in _read_with_length\n    return self.loads(obj)\n           ^^^^^^^^^^^^^^^\n  File \"/opt/bitnami/spark/python/lib/pyspark.zip/pyspark/serializers.py\", line 472, in loads\n    return cloudpickle.loads(obj, encoding=encoding)\n           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\nModuleNotFoundError: No module named 'functions'\n"
+     ]
+    }
+   ],
    "source": [
     "numHashTables = int(BAND * ROW)\n",
     "\n",
-    "shingle_udf = udf(lambda protein: create_shingles(protein, k=SHINGLE), ArrayType(StringType()))\n",
-    "df = data.withColumn(\"shingles\", shingle_udf(col(\"protein\")))\n",
+    "shingle_udf = udf(lambda x: create_shingles(x, k=SHINGLE), ArrayType(StringType()))\n",
     "\n",
-    "# Convert shingles into feature vectors\n",
-    "hashingTF = HashingTF(inputCol=\"shingles\", outputCol=\"features\", numFeatures=10000)\n",
+    "df = df.withColumn(\"shingles\", shingle_udf(col(\"protein\")))\n",
+    "\n",
+    "hashingTF = HashingTF(inputCol=\"shingles\", outputCol=\"features\", numFeatures=1000)\n",
+    "mh = MinHashLSH(inputCol=\"features\", outputCol=\"hashes\", numHashTables=numHashTables)\n",
+    "\n",
+    "# Transform the data to include the features\n",
     "featurizedData = hashingTF.transform(df)\n",
     "\n",
-    "minHashLSH = MinHashLSH(inputCol=\"features\", outputCol=\"hashes\", numHashTables=numHashTables)\n",
-    "model = minHashLSH.fit(featurizedData)\n",
+    "model = mh.fit(featurizedData)\n",
+    "\n",
     "result = model.transform(featurizedData)\n",
     "\n",
-    "# Perform LSH to find similar items (clusters)\n",
-    "lsh_clusters = model.approxSimilarityJoin(result, result, 1.0, distCol=\"distance\") \\\n",
-    "    .select(col(\"datasetA.name\").alias(\"nameA\"),\n",
-    "            col(\"datasetB.name\").alias(\"nameB\"),\n",
-    "            col(\"distance\")) \\\n",
-    "    .filter(col(\"nameA\") != col(\"nameB\"))\n",
+    "lsh_clusters = model.approxSimilarityJoin(result, result, 1.0, distCol=\"distance\")\n",
     "\n",
-    "cluster_df = lsh_clusters.groupBy(\"nameA\").agg(collect_list(\"nameB\").alias(\"lsh_cluster\"))\n",
+    "# Select only the necessary columns and filter self-joins\n",
+    "lsh_clusters = lsh_clusters.select(col(\"datasetA.cluster\").alias(\"clusterA\"),\n",
+    "                                   col(\"datasetB.cluster\").alias(\"clusterB\"),\n",
+    "                                   col(\"distance\")).filter(col(\"clusterA\") != col(\"clusterB\"))\n",
     "\n",
-    "# Prepare ground truth and predicted clusters\n",
-    "ground_truth_clusters = df.groupBy(\"cluster\").agg(collect_list(\"name\").alias(\"names\")).collect()\n",
-    "ground_truth_clusters = {row[\"cluster\"]: row[\"names\"] for row in ground_truth_clusters}\n",
+    "# Create a new DataFrame with unique cluster assignments\n",
+    "cluster_assignments = lsh_clusters.groupBy(\"clusterA\").agg(collect_list(\"clusterB\").alias(\"lsh_cluster\"))\n",
     "\n",
-    "predicted_clusters = cluster_df.collect()\n",
-    "predicted_clusters = {row[\"nameA\"]: row[\"lsh_cluster\"] for row in predicted_clusters}\n",
+    "df_with_lsh = df.join(cluster_assignments, df.cluster == cluster_assignments.clusterA, how=\"left\")\n",
     "\n",
-    "# Calculate accuracy\n",
-    "ground_truth = [ground_truth_clusters[cluster] for cluster in ground_truth_clusters]\n",
-    "predicted = [predicted_clusters[name] for name in predicted_clusters]\n",
+    "# Select the final columns\n",
+    "final_df = df_with_lsh.select(\"cluster\", \"name\", \"protein\", \"lsh_cluster\")\n",
     "\n",
-    "accuracy = calculate_accuracy(ground_truth, predicted)\n",
+    "final_df.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40887678-0acd-4685-a146-087c2cc6c780",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import accuracy_score, confusion_matrix, adjusted_mutual_info_score\n",
     "\n",
-    "print(f\"Clustering Accuracy: {accuracy}\")\n",
-    "cluster_df.show()"
+    "# Fill missing values in lsh_cluster with the original cluster values for comparison\n",
+    "df_with_lsh = df_with_lsh.withColumn(\"lsh_cluster\", col(\"lsh_cluster\").cast(StringType()))\n",
+    "df_with_lsh = df_with_lsh.withColumn(\"lsh_cluster\", udf(lambda x: x if x else [], ArrayType(StringType()))(col(\"lsh_cluster\")))\n",
+    "df_with_lsh = df_with_lsh.withColumn(\"lsh_cluster\", udf(lambda x: x[0] if x else \"N/A\", StringType())(col(\"lsh_cluster\")))\n",
+    "\n",
+    "final_df = df_with_lsh.select(\"cluster\", \"lsh_cluster\")\n",
+    "final_pd = final_df.toPandas()\n",
+    "\n",
+    "true_labels = final_pd['cluster']\n",
+    "predicted_labels = final_pd['lsh_cluster']\n",
+    "\n",
+    "accuracy = accuracy_score(true_labels, predicted_labels)\n",
+    "conf_matrix = confusion_matrix(true_labels, predicted_labels)\n",
+    "fp = conf_matrix.sum(axis=0) - np.diag(conf_matrix)\n",
+    "fn = conf_matrix.sum(axis=1) - np.diag(conf_matrix)\n",
+    "adjusted_mi = adjusted_mutual_info_score(true_labels, predicted_labels)\n",
+    "\n",
+    "print(f\"Accuracy: {accuracy}\")\n",
+    "print(f\"False Positives: {fp.sum()}\")\n",
+    "print(f\"False Negatives: {fn.sum()}\")\n",
+    "print(f\"Adjusted Mutual Information Score: {adjusted_mi}\")"
    ]
   },
   {
